--- a/website/work.html
+++ b/website/work.html
@@ -23,80 +23,120 @@
 			function describe() {
 				var work = "http://ambientCG.com/a/3DApple001";
 				var description = document.getElementById("description");
-				var query = "DESCRIBE ";
-				query += "<" + work + "> ";
-				query += " ?workType ?c ";
-				query += " FROM <http://localhost:8890/DAV/fgw> FROM <http://localhost:8890/DAV/fgw/inferr>";
-				for(platform in platforms) {
-					query += " FROM";
-					query += platforms[platform].join(" FROM ");
-				}
-				query += " WHERE {<" + work + "> fgwcore:foundIn ?c.OPTIONAL {<" + work + "> fgwcore:type ?workType.}}";
+				var query = "SELECT DISTINCT ?label ?comment ?author ?author_label ?license ?location ?notice ?type ?type_label ?tag ?platform ?platform_label ?collection ?collection_label ";
+				query += "WHERE {";
+				query += "<" + work + "> rdf:type fgwcore:Work.";
+				query += "<" + work + "> rdfs:label ?label.";
+				query += "<" + work + "> rdfs:comment ?comment.";
+				query += "<" + work + "> fgwcore:author ?author.";
+				query += "?author rdfs:label ?author_label.";
+				query += "<" + work + "> fgwcore:foundIn ?platform.";
+				query += "?platform rdf:type fgwcore:Platform.";
+				query += "?platform rdfs:label ?platform_label.";
+				query += "<" + work + "> fgwcore:license ?license.";
+				query += "OPTIONAL {<" + work + "> fgwcore:location ?location.}";
+				query += "OPTIONAL {<" + work + "> fgwcore:notice ?notice.}";
+				query += "OPTIONAL {<" + work + "> fgwcore:type ?type. ?type rdfs:label ?type_label.}";
+				query += "OPTIONAL {<" + work + "> fgwcore:foundIn ?collection. ?collection rdf:type fgwcore:Collection. ?collection rdfs:label ?collection_label.}";
+				query += "OPTIONAL {<" + work + "> fgwcore:tag ?tag.}";
+				query += "}";
 				console.log(query);
 				sparqlQuery(query, function(data) {
-					var html = "";
-					var objs = {};
-					var formats = ["http://www.fgw.net/core#format"]
-					for(result in data.results.bindings) {
-						if(!(data.results.bindings[result].s.value in objs)) {
-							objs[data.results.bindings[result].s.value] = {};
+					var query = "DESCRIBE <" + data.results.bindings[0].license.value + ">";
+					sparqlQuery(query, function(licensedescription) {
+						var labels = {};
+						var license = {};
+						for(result in licensedescription.results.bindings) {
+							console.log(licensedescription.results.bindings[result].p.value);
+							if(licensedescription.results.bindings[result].p.value == "http://www.w3.org/2000/01/rdf-schema#label") {
+								labels[licensedescription.results.bindings[result].s.value] = licensedescription.results.bindings[result].o.value;
+							}
+							if(licensedescription.results.bindings[result].s.value == data.results.bindings[0].license.value) {
+								if(licensedescription.results.bindings[result].p.value == "http://www.w3.org/1999/02/22-rdf-syntax-ns#type") {
+									if(licensedescription.results.bindings[result].o.value == "http://www.fgw.net/core#LicenseDocument") {
+										license.type = "simple";
+									} else if(licensedescription.results.bindings[result].o.value == "http://www.fgw.net/core#DisjunctiveLicenseSet") {
+										license.type = "disjunctive";
+									}
+								}
+								if(licensedescription.results.bindings[result].p.value == "http://www.fgw.net/core#memberLicense") {
+									if(!license.members) {
+										license.members = [];
+									}
+									license.members.push(licensedescription.results.bindings[result].o.value);
+								}
+							}
 						}
-						if(!(data.results.bindings[result].p.value in objs[data.results.bindings[result].s.value])) {
-							objs[data.results.bindings[result].s.value][data.results.bindings[result].p.value] = [];
+						var html = "";
+						var tags = [];
+						for(result in data.results.bindings) {
+							if(data.results.bindings[result].tag && !tags.includes(data.results.bindings[result].tag.value)) {
+								tags.push(data.results.bindings[result].tag.value);
+							}
 						}
-						objs[data.results.bindings[result].s.value][data.results.bindings[result].p.value].push(data.results.bindings[result].o.value);
-					}
-					html += "<h1>" + escapeHtml(objs[work]["http://www.w3.org/2000/01/rdf-schema#label"][0]) + "</h1>";
-					html += "<dl>";
-					html += "<dt>Title</dt>";
-					html += "<dd>" + escapeHtml(objs[work]["http://www.w3.org/2000/01/rdf-schema#label"][0]) + "</dd>";
-					html += "<dt>Description</dt>";
-					html += "<dd>" + escapeHtml(objs[work]["http://www.w3.org/2000/01/rdf-schema#comment"][0]).replace(/(?:\r\n|\r|\n)/g, "<br/>") + "</dd>";
-					var platform;
-					var collections = [];
-					var found = objs[work]["http://www.fgw.net/core#foundIn"];
-					for(f in found) {
-						if(objs[found[f]]["http://www.w3.org/1999/02/22-rdf-syntax-ns#type"] == "http://www.fgw.net/core#Collection") {
-							collections.push(found[f]);
+						var collections = [];
+						var collectionsl = [];
+						for(result in data.results.bindings) {
+							if(data.results.bindings[result].collection && !collections.includes(data.results.bindings[result].collection.value)) {
+								collections.push(data.results.bindings[result].collection.value);
+								collectionsl.push(data.results.bindings[result].collection_label.value);
+							}
+						}
+						html += "<h1>" + escapeHtml(data.results.bindings[0].label.value) + "</h1>";
+						html += "<dl>";
+						html += "<dt>Title</dt>";
+						html += "<dd>" + escapeHtml(data.results.bindings[0].label.value) + "</dd>";
+						html += "<dt>Description</dt>";
+						html += "<dd>" + escapeHtml(data.results.bindings[0].comment.value).replace(/(?:\r\n|\r|\n)/g, "<br/>") + "</dd>";
+						if(tags.length > 0) {
+							html += "<dt>Tags</dt>";
+							html += "<dd>";
+							html += escapeHtml(tags.join(", "));
+							html += "</dd>";
+						}
+						if(data.results.bindings[0].notice) {
+							html += "<dt>Notice</dt>";
+							html += "<dd>" + escapeHtml(data.results.bindings[0].notice.value).replace(/(?:\r\n|\r|\n)/g, "<br/>") + "</dd>";
+						}
+						if(data.results.bindings[0].workType) {
+							html += "<dt>Work type</dt>";
+							html += "<dd>" + escapeHtml(data.results.bindings[0].workType.value) + "</dd>";
+						}
+						console.log(license);
+						if(license.type == "simple") {
+							html += "<dt>License</dt>";
+							console.log(labels);
+							html += "<dd>" + escapeHtml(labels[data.results.bindings[0].license.value]) + "</dd>";
 						} else {
-							platform = found[f];
+							html += "<dt>License</dt>";
+							html += "<dd>";
+							for(licenseMember in license.members) {
+								html += license.members[licenseMember] + "<strong> or </strong>";
+							}
+							html += html.substr(0, -21);
+							html += "</dd>";
 						}
-					}
-					var tags = objs[work]["http://www.fgw.net/core#tag"];
-					if(tags) {
-						html += "<dt>Tags</dt>";
-						html += "<dd>";
-						html += escapeHtml(tags.join(", "));
-						html += "</dd>";
-					}
-					var notice = objs[work]["http://www.fgw.net/core#notice"][0];
-					if(notice) {
-						html += "<dt>Notice</dt>";
-						html += "<dd>" + escapeHtml(notice).replace(/(?:\r\n|\r|\n)/g, "<br/>") + "</dd>";
-					}
-					var workType = objs[work]["http://www.fgw.net/core#type"][0];
-					if(workType) {
-						html += "<dt>Work type</dt>";
-						html += "<dd>" + escapeHtml(objs[workType]["http://www.w3.org/2000/01/rdf-schema#label"][0]).replace(/(?:\r\n|\r|\n)/g, "<br/>") + "</dd>";
-					}
-					if(platform) {
+						if(data.results.bindings[0].licenseLevel) {
+							html += "<dt>License</dt>";
+							html += "<dd>" + escapeHtml(data.results.bindings[0].licenseLevel.value) + "</dd>";
+						}
 						html += "<dt>Platform</dt>";
-						html += "<dd>" + escapeHtml(objs[platform]["http://www.w3.org/2000/01/rdf-schema#label"][0]).replace(/(?:\r\n|\r|\n)/g, "<br/>") + "</dd>";
-					}
-					if(collections.length > 0) {
-						html += "<dt>Collections</dt>";
-						html += "<dd>";
-						html += "<ul>";
-						for(collection in collections) {
-							html += "<li>";
-							escapeHtml(objs[collections[collection]]["http://www.w3.org/2000/01/rdf-schema#label"][0]).replace(/(?:\r\n|\r|\n)/g)
-							html += "</li>";
+						html += "<dd>" + escapeHtml(data.results.bindings[0].platform_label.value) + "</dd>";
+						if(collections.length > 0) {
+							html += "<dt>Collections</dt>";
+							html += "<dd>";
+							html += "<ul>";
+							for(collection in collections) {
+								html += "<li>";
+								html += escapeHtml(collectionsl[collection]);
+								html += "</li>";
+							}
+							html += "</ul>";
+							html += "</dd>";
 						}
-						html += "</ul>";
-						html += "</dd>";
-					}
-					html += "</dl>";
-					description.innerHTML = html;
+						html += "</dl>";
+						description.innerHTML = html;
+					});
 				});
 				return false;
 			}
